<resources>
    <string name="app_name">Niznet</string>

    <string name="multicolor">
        <font fgcolor="#92929d">By signing up, you confirm that you’ve read\nand accepted our</font>
        <font fgcolor="#0062ff">User Notice</font>
        <font fgcolor="#92929d">and</font>
        <font fgcolor="#0062ff">Privacy Policy.</font>
    </string>
    <string name="policy">
        <font fgcolor="#696974">I agree to Square’s </font>
        <font fgcolor="#ff2e63">Cookie</font>
        <font fgcolor="#696974">and</font>
        <font fgcolor="#50b5ff">Privacy Policy.</font>
    </string>
    <string name="terms_and_condition">
        <font fgcolor="#92929d">By clicking "Get Started - Free!"\nI agree to Square’s <u>Terms of Service</u></font>
    </string>
    <string name="sign_up_to_your_account">Sign Up to your account</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="none">None</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="already_have_an_square_account_log_in">Already have an Square account? Log in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="can_t_login_sign_up_for_new_user">Sign up </string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="cuccu">CUCCU</string>
    <string name="login">Login</string>
    <string name="monitoring"><![CDATA[Monitoring your Sales Anytime.\nEasier &amp; Effective than Before]]></string>
    <string name="log_in_to_your_account">Log In to Your Account</string>
    <string name="email_or_username">Email or Username</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_your_free_account">Create your Free Account</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="business_url">Business URL</string>
    <string name="circle_com_username">circle.com/username</string>
    <string name="create_an_account">Create an Account</string>
    <string name="just_sign">Just sign in if you have an account in here.\nEnjoy our Website</string>
    <string name="your_email_username">Your Email / Username</string>
    <string name="welcome_to_the_professional_community">Welcome to the\nProfessional Community</string>
    <string name="find_thousand">Find thousand opportunities and ready\nto level up your careers.</string>
    <string name="search">Search...</string>
    <string name="get_started">Get Started</string>
    <string name="apply_for">Apply for Million Chance\nto Get Dreams Job</string>
    <string name="standard">Standard</string>
    <string name="premium">Premium</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_password">Your Password</string>
    <string name="create_password">Create Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="major">Major</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="get_started_free">Get Started - FREE</string>
    <string name="let_s_sign_up">Let’s Sign up first for enter into\nSquare Website. Uh She Up!</string>
    <string name="hello_my_name">Hello my name...</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mail_address">Mail Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="avian_rizky_prasetya">Avian Rizky Prasetya</string>
    <string name="avianrizkyprasetya_mail_com">avianrizkyprasetya@mail.com</string>
    <string name="password_txt">*************</string>
    <string name="instant_login">Instant Login</string>
    <string name="txt_continue">Continue</string>
    <string name="email_cant_empty">Email tidak boleh kosong</string>
    <string name="password_cant_empty">Password tidak boleh kosong</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="training">Training</string>
    <string name="healthtips">HealthTips</string>
    <string name="goals">Goals</string>
    <string name="profile">Profile </string>
    <string name="yoga_basics_for_beginners">Yoga Basics for Beginners</string>
    <string name="home">Home</string>
    <string name="pesanan">Riwayat Pemesanan</string>
    <string name="category">Category</string>
    <string name="news_product">New Products</string>

    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="brands">Brands</string>
    <string name="kategori">Kategori</string>
    <string name="produk_terbaru">Produk Terbaru</string>
    <string name="keranjang">Keranjang</string>
    <string name="total_harga">Total Harga</string>
    <string name="detail_checkout">Detail Checkout</string>
    <string name="delivery_address">Tempat Pengambilan</string>
    <string name="confirm_order">Konfirmasi Pembelian</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="pesanan_anda">Pesanan Anda</string>
    <string name="pesanan_saya">Pesanan Saya</string>
    <string name="edit_profile">Edit Profil</string>


    <!--ImageCrops-->
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="internal_storage">Internal storage</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="silahkan_ulangi_password">Silahkan Ulangi Password</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="telp">Telpon</string>
    <string name="belum_memiliki_akun">Belum mempunyai akun?</string>
    <string name="cari">Cari..</string>
    <string name="varian">Varian</string>
    <string name="email_or_phone">Email atau No Handphone</string>
    <string name="pilih_tempat_pengambilan">Pilih Tempat Pengambilan</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="variasi">Variasi</string>
    <string name="upload_bukti">Upload bukti pembayaran</string>
    <string name="bank_name">Kirim Melalui</string>
    <string name="pilih_bank">Pilih Bank</string>
    <string name="pilih_nama_bank">Pilih Nama Bank</string>
</resources>
