<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_bg"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        tools:context=".Square_SignIn1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="visible"
            android:src="@drawable/ic_niznet_bg_trans" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:fontFamily="@font/rubik_bold_italic"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="-50dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:background="@drawable/rectangle_white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cabin_semibold"
                android:text="@string/login"
                android:textColor="@color/bg_color"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/rectangle_gray_border"
                android:fontFamily="@font/cabin_medium"
                android:hint="@string/email_or_phone"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/txt_black"
                android:textColorHint="@color/txt_hint"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_error_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:fontFamily="@font/avenir_book"
                android:text="@string/email_cant_empty"
                android:textColor="@color/red_color"
                android:textSize="4pt" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/rectangle_gray_border"
                android:fontFamily="@font/cabin_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/txt_black"
                android:textColorHint="@color/txt_hint"
                android:textSize="14sp" />
                <ImageView
                    android:id="@+id/iv_hide_pw_login"
                    android:layout_marginLeft="-50dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="25dp"
                    android:padding="3dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_eye2"/>
                <ImageView
                    android:id="@+id/iv_show_pw_login"
                    android:layout_marginLeft="-50dp"
                    android:layout_marginTop="10dp"
                    android:padding="3dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_eye_cross2"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_error_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:fontFamily="@font/avenir_book"
                android:text="@string/password_cant_empty"
                android:textColor="@color/red_color"
                android:textSize="4pt" />
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_bg_gradient"
                android:fontFamily="@font/cabin_semibold"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:fontFamily="@font/cabin_semibold"
                android:text="@string/belum_memiliki_akun"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:fontFamily="@font/cabin_semibold"
                android:text="@string/daftar"
                android:textColor="@color/yellow"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/privacy_policy"
                android:textColor="@color/light_white"
                android:textSize="12sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/circle_white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/terms_of_use"
                android:textColor="@color/light_white"
                android:textSize="12sp" />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>