<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="-60dp"
    android:id="@+id/ll_detail_profile_reg"
    android:visibility="gone"
    android:layout_marginRight="15dp"
    android:background="@drawable/rectangle_white"
    android:orientation="vertical"
    android:paddingBottom="18dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/cabin_semibold"
        android:text="@string/register"
        android:textColor="@color/bg_color"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/et_nama_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rectangle_gray_border"
        android:fontFamily="@font/cabin_medium"
        android:hint="@string/nama"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/txt_black"
        android:textColorHint="@color/txt_hint"
        android:textSize="14sp" />
    <EditText
        android:id="@+id/et_alamat_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rectangle_gray_border"
        android:fontFamily="@font/sf_pro_display_medium"
        android:hint="@string/alamat"
        android:scrollHorizontally="false"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:lines="3"
        android:inputType="textMultiLine"
        android:paddingLeft="15dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/txt_black"
        android:textColorHint="@color/txt_hint"
        android:textSize="14sp" />
    <EditText
        android:id="@+id/et_telp_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rectangle_gray_border"
        android:fontFamily="@font/sf_pro_display_medium"
        android:hint="@string/telp"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/txt_black"
        android:textColorHint="@color/txt_hint"
        android:textSize="14sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KTP"
        android:layout_marginLeft="15dp"
        android:visibility="gone"
        android:layout_marginTop="23.3dp"
        android:textSize="13.3sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/sf_pro_display_regular"/>
    <FrameLayout
        android:id="@+id/fl_ktp_profile_reg"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:background="@drawable/border_shadow"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/iv_ktp_profile_reg"
            android:layout_width="match_parent"
            android:layout_height="170dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus_with_bg"
            android:layout_gravity="center"/>
    </FrameLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_bg_gradient"
        android:fontFamily="@font/cabin_semibold"
        android:text="@string/daftar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>